--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,11 @@
 # limitations under the License.
 
 homepage: "https://metricaz.com/"
-documentation: "https://metricaz.com/#contact"
+documentation: "https://metricaz.com/contato/"
 versions:
+# Latest version
+  - sha: c49a667281e2b142e7404641408bad18e28780af
+    changeNotes: Atualização 2
+# Older versions
   - sha: 84443482acddc4784bb8053e4ee13de68d5c6cda
     changeNotes: Initial Version
