--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,7 +22,7 @@ versions:
   - sha: 4f03949484675b8af8d472149bfc2927fa6ec91a
     changeNotes: Update 10.1 - Stable version and adjust cookie create
   - sha: 9e35f9e1fa2d938d7972fa6374874e73d333fb39
-    changeNotes: Update 9 - Adjust field domain error
+    changeNotes: Update 9 - Adjust field domain errors
   - sha: cd809a1d054a8ef876c5cbe5bac70b0f8b842c77
     changeNotes: Update 8 - Upgrade logics and unit tests included
   - sha: 8e45ca940f8b7ac28b69b6e460171e0b32374e60
